# utf8

./: .gitignore  CMakeLists.txt
src/: utf.c  utf.h
tests/: CMakeLists.txt  test.bat  test.c
